# book-WebScrapingWithPython

./: .python-version  ch05-csv.py  ch05-scrap.py  pyproject.toml  scrap.py  twitter.py
ch01~04/: jsonString.py
ch05/: ch05-csv.py  ch05-scrap.py  email.py
ch06/: scrapy.py
ch07/: scrap.py
ch_self/: jolse.py  onemouth.py  scrap.py  webtoon.py
