[tool.poetry]
name = "book-webscraping"
version = "0.1.0"
description = ""
authors = ["moonpeter <moonpeter@kakao.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bs4 = "^0.0.1"
twitter = "^1.18.0"
pymysql = "^0.10.0"
cryptography = "^3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
